tests/testcases/valid/control_flow/10_for_loops_basic.ciel
// Basic for loop test cases

int main() {
    // Test 1: Basic for loop with declaration, condition, and increment
    int sum = 0;
    for (int i = 0; i < 10; i = i + 1) {
        sum = sum + i;
    }

    // Test 2: For loop with pre-declared variable (expression initialization)
    int j = 0;
    for (j = 0; j < 5; j = j + 1) {
        sum = sum + j;
    }

    // Test 3: For loop with different increment value
    for (int k = 0; k < 10; k = k + 2) {
        sum = sum + k;
    }

    return 0;
}
